--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:css": "npx stylelint \"**/*.scss\" --color",
+    "lint:css": "npx stylelint \"**/*.less\" --color",
     "lint:js": "npx eslint . --ext .jsx,.js --color --no-error-on-unmatched-pattern",
     "pretest": "npm run lint",
     "test": "npx cross-env NODE_ENV=test npx jest --coverage --verbose",
@@ -50,6 +50,7 @@
     "@babel/preset-react": "^7.8.3",
     "@testing-library/react": "^9.5.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-rsuite": "^4.0.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
@@ -63,21 +64,21 @@
     "jest": "^25.1.0",
     "jest-cli": "^25.1.0",
     "jest-dom": "^4.0.0",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-test-renderer": "^16.13.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "stylelint": "^13.2.1",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-scss": "^3.14.2",
+    "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^2.3.5",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
@@ -89,6 +90,10 @@
     "@babel/runtime-corejs3": "^7.8.7",
     "classnames": "^2.2.6",
     "core-js": "^3.6.4",
-    "dots.js": "0.0.6"
+    "immutable": "^4.0.0-rc.12",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
+    "rsuite": "^4.3.0"
   }
 }
