--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "jest": "^25.1.0",
     "jest-cli": "^25.1.0",
     "jest-dom": "^4.0.0",
+    "jest-fetch-mock": "^3.0.3",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.9.0",
