--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint:js": "npx eslint . --ext .jsx,.js --color --no-error-on-unmatched-pattern",
     "pretest": "npm run lint",
     "test": "npx cross-env NODE_ENV=test npx jest --coverage --verbose",
-    "test:watch": "npx cross-env NODE_ENV=test npx jest --watchAll",
+    "test:watch": "npm run test -- --watchAll",
     "clean": "npm run clean:build",
     "clean:build": "npx rimraf ./dist",
     "prebuild": "npm run clean",
@@ -92,6 +92,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.6.4",
     "immutable": "^4.0.0-rc.12",
+    "prop-types": "^15.7.2",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
