Refactor building phase

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "clean:build": "npx rimraf ./dist",
     "prebuild": "npm run clean",
     "build": "npx webpack --config ./internals/webpack/webpack.build.js",
-    "build:prod": "npx cross-env NODE_ENV=prod npm run build",
-    "build:dev": "npx cross-env NODE_ENV=dev npm run build -- --colors --progress",
+    "build:prod": "npx cross-env NODE_ENV=production npm run build",
+    "build:dev": "npx cross-env NODE_ENV=development npm run build -- --colors --progress",
     "start": "npx webpack-dev-server --config ./internals/webpack/webpack.serve.js --colors --progress"
   },
   "repository": {
